29.04.2020
[*] admin/database fixed and decorated
[*] Automation db connection fixed
[*] crop_finder db connection fixed

28.04.2020
[*] install fixed and decorated
[*] moved queries from index.php to model
[*] session fixed to support mysqli
[*] Units fixed and decorated
[*] Ranking fixed and decorated
[*] Multisort deprecated code fix
[*] templates db connection fixed

27.04.2020
[*] deprecated class contructor call fixed
[*] protection fixed to support mysqli
[*] broken class db_MYSQLi fixed and partially decorated
[*] admin/database use mysqli and decorated

26.04.2020
[+] composer