@@ -2,6 +2,7 @@
 [*] admin/database fixed and decorated
 [*] Automation db connection fixed
 [*] crop_finder db connection fixed
+[*] Automation filelockers fixed
 
 28.04.2020
 [*] install fixed and decorated
